--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "mbi-calculator": {
+    "bmi-calculator": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/mbi-calculator",
+            "outputPath": "dist/bmi-calculator",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -66,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "mbi-calculator:build"
+            "browserTarget": "bmi-calculator:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "mbi-calculator:build:production"
+              "browserTarget": "bmi-calculator:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "mbi-calculator:build"
+            "browserTarget": "bmi-calculator:build"
           }
         },
         "test": {
@@ -116,11 +116,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "mbi-calculator:serve"
+            "devServerTarget": "bmi-calculator:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "mbi-calculator:serve:production"
+              "devServerTarget": "bmi-calculator:serve:production"
             }
           }
         },
@@ -131,5 +131,5 @@
       }
     }
   },
-  "defaultProject": "mbi-calculator"
+  "defaultProject": "bmi-calculator"
 }
